@@ -2,7 +2,10 @@ package com.pi4j.example;
 
 import com.pi4j.Pi4J;
 import com.pi4j.context.Context;
-import com.pi4j.example.applications.*;
+import com.pi4j.example.applications.ADS1115_App;
+import com.pi4j.example.applications.Joystick_App;
+import com.pi4j.example.applications.SimpleButton_App;
+import com.pi4j.example.applications.SimpleLED_App;
 import com.pi4j.example.helpers.SingletonAppHelper;
 import com.pi4j.library.pigpio.PiGpio;
 import com.pi4j.plugin.pigpio.provider.gpio.digital.PiGpioDigitalInputProvider;
@@ -16,7 +19,6 @@ import picocli.CommandLine.Command;
 import picocli.CommandLine.Model.CommandSpec;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Command(name = "Raspberry Pi Example Launcher", version = "1.0.0", mixinStandardHelpOptions = true)
 public final class Launcher implements Runnable {
@@ -27,6 +29,8 @@ public final class Launcher implements Runnable {
     public static final List<Application> APPLICATIONS = new ArrayList<>(Arrays.asList(
         new SimpleButton_App(),
         new Joystick_App(),
+        new SimpleLED_App(),
+            new ADS1115_App(),
         new SimpleLED_App(),
         new LEDButton_App()
     ));
@@ -168,12 +172,11 @@ public final class Launcher implements Runnable {
 
         // Append list of application targets
         targets.addAll(this.runners.stream()
-            .map(runner -> {
-                final var runnerApp = runner.getApp();
-                final var runnerLabel = runnerApp.getName() + " (" + runnerApp.getDescription() + ")";
-                return new Target(runnerLabel, runner);
-            })
-            .collect(Collectors.toList()));
+                .map(runner -> {
+                    final var runnerApp = runner.getApp();
+                    final var runnerLabel = runnerApp.getName() + " (" + runnerApp.getDescription() + ")";
+                    return new Target(runnerLabel, runner);
+                }).toList());
 
         return targets;
     }
